[package]
name = "findfile"
version = "0.1.0"
authors = ["PaKo <pako8128@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.5"
human-panic = "1.0.1"
log = "0.4.8"
env_logger = "0.7.1"
failure = "0.1.6"
exitfailure = "0.5.1"
exitcode = "1.1.2"
